# RetinalViT

./: .gitignore  README.md  log.txt  pyproject.toml
configs/: config.yaml  config_prototype.yaml
lightning_logs/version_0/: events.out.tfevents.1706218032.gpu01.597609.0
lightning_logs/version_1/: events.out.tfevents.1706218075.gpu01.597651.0
lightning_logs/version_10/: events.out.tfevents.1706220960.gpu01.601831.0
lightning_logs/version_11/: events.out.tfevents.1706221031.gpu01.601896.0
lightning_logs/version_12/: events.out.tfevents.1706221161.gpu01.602971.0
lightning_logs/version_13/: events.out.tfevents.1706221750.gpu01.604080.0
lightning_logs/version_14/: events.out.tfevents.1706221785.gpu01.605152.0
lightning_logs/version_15/: events.out.tfevents.1706237009.gpu01.607086.0
lightning_logs/version_16/: events.out.tfevents.1706237139.gpu01.608175.0
lightning_logs/version_17/: events.out.tfevents.1706274830.gpu01.612448.0
lightning_logs/version_18/: events.out.tfevents.1706275085.gpu01.613591.0
lightning_logs/version_19/: events.out.tfevents.1706275909.gpu01.614780.0
lightning_logs/version_2/: events.out.tfevents.1706218108.gpu01.598393.0
lightning_logs/version_20/: events.out.tfevents.1706276568.gpu01.615933.0
lightning_logs/version_21/: events.out.tfevents.1706277184.gpu01.617089.0
lightning_logs/version_22/: events.out.tfevents.1706277604.gpu01.618238.0
lightning_logs/version_23/: events.out.tfevents.1706279042.gpu01.619433.0
lightning_logs/version_24/: events.out.tfevents.1706293758.gpu01.621558.0
lightning_logs/version_25/: events.out.tfevents.1706294173.gpu01.622660.0
lightning_logs/version_26/: events.out.tfevents.1706294423.gpu01.623769.0
notebooks/: AttributionBuilding.ipynb  Finetuning.ipynb  debugging.ipynb  fundusTesting.ipynb  imageNetTesting.ipynb  neighbours_attrs.ipynb  pretrain_projector.ipynb  prototypes_learning.ipynb  quick_experiment.ipynb  superpixels.ipynb  superpixels_neighbours.ipynb
scripts/: test_datamodule.py  test_maplesDR.py  test_perfomance_fundus.py
src/vitRet/data/: base.py  (+5 more)
(+84 files in other folders)
